Footer z-index fix

--- a/static/css/foot.css
+++ b/static/css/foot.css
@@ -4,7 +4,6 @@
 footer.site {
 	position: fixed;
 	width: 100%;
-    z-index: -1;
     bottom: 0;
 }
 
@@ -20,8 +19,8 @@ footer section {
 	margin: 50px 0;
 }
 
-footer.site p, footer.site ul {
+footer.site p {
 	font-size: 15px;
 	color: #000;
-	text-align: center;
+	text-align: left;
 }
